import { Categoria } from "./categoria.model";

export class Subcategoria {
    id!: number;
    nome!: string;
    categoria!: Categoria
}
