export class Topicos {
    id!: number;
    nome!: string;
    descricao!: string;
    estrelas!: number;
}
